--- a/dizon.html
+++ b/dizon.html
@@ -46,6 +46,8 @@ ul, #myUL {
 
 <h2>Nagkakaisang Maharlikang Lahi</h2>
 
+<p>paumanhin po sa mga mali. hiling po ang pagwawasto. salamat po.</p>
+
 <ul id="myUL">
   	<li><span class="caret">Kulas</span>
 
@@ -54,6 +56,39 @@ ul, #myUL {
     	<!--supri-->
       	<li><span class="caret">Supri & Asawa</span>
       		<ul class="nested">
+
+      			<li><span class="caret">Hardi & </span>
+		  			<ul class="nested">
+		  				<li><span class="caret">Peter & </span>
+							<ul class="nested">
+              					<li>Anak 1</li>
+              					<li>Anak 2</li>              					
+            				</ul>
+          				</li>
+		  				<li><span class="caret">Anak & asawa</span>
+							<ul class="nested">
+              					<li>Anak 1</li>
+              					<li>Anak 2</li>              					
+            				</ul>
+          				</li>
+		  				<li><span class="caret">Anak & asawa</span>
+							<ul class="nested">
+              					<li>Anak 1</li>
+              					<li>Anak 2</li>              					
+            				</ul>
+          				</li>
+          				<li><span class="caret">Anak & asawa</span>
+							<ul class="nested">
+              					<li>Anak 1</li>
+              					<li>Anak 2</li>              					
+            				</ul>
+          				</li>
+
+          			</ul>
+          		</li>   
+
+
+
       		</ul>
       	</li>   
 
@@ -91,6 +126,17 @@ ul, #myUL {
           			</ul>
           		</li>   
 
+      			<li><span class="caret">Jorge & </span>
+		  			<ul class="nested">
+		  				<li><span class="caret">Arnel & asawa</span>
+							<ul class="nested">
+              					<li>Apo 1</li>
+              					<li>Apo 2</li>              					
+            				</ul>
+          				</li>
+          			</ul>
+          		</li>            		
+
       			<li><span class="caret">Suk & </span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Mel & asawa</span>
@@ -126,14 +172,23 @@ ul, #myUL {
           			</ul>
           		</li>
 
-      			<li><span class="caret">Rose & </span>
+      			<li><span class="caret">Rose & Sicat</span>
 		  			<ul class="nested">
-		  				<li><span class="caret">Jocelyn & asawa</span>
+		  				<li><span class="caret">Jocelyn & Sicat</span>
 							<ul class="nested">
               					<li>Apo 1</li>
               					<li>Apo 2</li>              					
             				</ul>
           				</li>
+		  				<li><span class="caret">Jovy & David</span>
+							<ul class="nested">
+              					<li>Apo 1</li>
+              					<li>Apo 2</li>              					
+            				</ul>
+          				</li>
+
+
+
           			</ul>
           		</li>
 
@@ -172,7 +227,7 @@ ul, #myUL {
 
           		<li><span class="caret">Africa & asawa</span>
 		  			<ul class="nested">
-		  				<li><span class="caret">Anak 1 & asawa</span>
+		  				<li><span class="caret">Kris & </span>
 							<ul class="nested">
               					<li>Apo 1</li>
               					<li>Apo 2</li>              					
@@ -186,7 +241,7 @@ ul, #myUL {
 
 
       	<!--aling-->
-      	<li><span class="caret">Aling &</span>
+      	<li><span class="caret">Aling & </span>
       		<ul class="nested">
 
       			<li><span class="caret">Pepe & </span>
@@ -211,12 +266,25 @@ ul, #myUL {
           				</li>
           			</ul>
           		</li>
+
+      			<li><span class="caret">Balai & Tongol</span>
+		  			<ul class="nested">
+		  				<li><span class="caret">Anak & asawa</span>
+							<ul class="nested">
+              					<li>Anak 1</li>
+              					<li>Anak 2</li>              					
+            				</ul>
+          				</li>
+          			</ul>
+          		</li>
+
+
       		</ul>
       	</li>	<!--aling-->
 
 
  
-      	<li><span class="caret">German+Flora</span>
+      	<li><span class="caret">German & Flora</span>
       		<ul class="nested">
 
 				<li><span class="caret">Abel & </span>
@@ -243,7 +311,7 @@ ul, #myUL {
           			</ul>
           		</li>
 
-          		<li><span class="caret">Gloria+asawa</span>
+          		<li><span class="caret">Gloria & asawa</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Anak 1 & asawa</span>
 							<ul class="nested">
@@ -261,8 +329,7 @@ ul, #myUL {
       	<li><span class="caret">Badi & Sidung Dimarucut</span>
       		<ul class="nested">
 
-
-      			<li><span class="caret">Francis & </span>
+      			<li><span class="caret">Norma & </span>
          			<ul class="nested">
           				<li><span class="caret">Anak 1 & Asawa</span>
             				<ul class="nested">
@@ -286,7 +353,35 @@ ul, #myUL {
           			</ul>
 		  		</li> 
 
-		  		<li><span class="caret">Puring & </span>
+
+      			<li><span class="caret">Renato & </span>
+         			<ul class="nested">
+          				<li><span class="caret">Anak 1 & Asawa</span>
+            				<ul class="nested">
+              					<li>Apo 1</li>
+              					<li>Apo 2</li>
+            				</ul>
+          				</li>
+
+          				<li><span class="caret">Anak 2 & Asawa</span>
+            				<ul class="nested">
+              					<li>Apo 1</li>
+              					<li>Apo 2</li>
+            				</ul>
+          				</li>
+
+          				<li><span class="caret">Anak 3 & asawa</span>
+            				<ul class="nested">
+              					<li>?</li>
+            				</ul>
+          				</li>
+          			</ul>
+		  		</li> 
+
+
+
+
+      			<li><span class="caret">Ligaya & </span>
          			<ul class="nested">
           				<li><span class="caret">Anak 1 & Asawa</span>
             				<ul class="nested">
@@ -298,6 +393,106 @@ ul, #myUL {
           				<li><span class="caret">Anak 2 & Asawa</span>
             				<ul class="nested">
               					<<li>Apo 1</li>
+              					<li>Apo 2</li>
+            				</ul>
+          				</li>
+
+          				<li><span class="caret">Anak 3 & asawa</span>
+            				<ul class="nested">
+              					<li>?</li>
+            				</ul>
+          				</li>
+          			</ul>
+		  		</li> 
+
+
+      			<li><span class="caret">Net & </span>
+         			<ul class="nested">
+          				<li><span class="caret">Regie & Guevarra</span>
+            				<ul class="nested">
+              					<li>Apo 1</li>
+              					<li>Apo 2</li>
+            				</ul>
+          				</li>
+
+          				<li><span class="caret">Anak 2 & Asawa</span>
+            				<ul class="nested">
+              					<<li>Apo 1</li>
+              					<li>Apo 2</li>
+            				</ul>
+          				</li>
+
+          				<li><span class="caret">Anak 3 & asawa</span>
+            				<ul class="nested">
+              					<li>?</li>
+            				</ul>
+          				</li>
+          			</ul>
+		  		</li> 		  		
+
+
+      			<li><span class="caret">Francisco (Boy) & </span>
+         			<ul class="nested">
+          				<li><span class="caret">Anak 1 & Asawa</span>
+            				<ul class="nested">
+              					<li>Apo 1</li>
+              					<li>Apo 2</li>
+            				</ul>
+          				</li>
+
+          				<li><span class="caret">Anak 2 & Asawa</span>
+            				<ul class="nested">
+              					<<li>Apo 1</li>
+              					<li>Apo 2</li>
+            				</ul>
+          				</li>
+
+          				<li><span class="caret">Anak 3 & asawa</span>
+            				<ul class="nested">
+              					<li>?</li>
+            				</ul>
+          				</li>
+          			</ul>
+		  		</li> 
+
+
+      			<li><span class="caret">Jose (Kusi) & </span>
+         			<ul class="nested">
+          				<li><span class="caret">Anak 1 & Asawa</span>
+            				<ul class="nested">
+              					<li>Apo 1</li>
+              					<li>Apo 2</li>
+            				</ul>
+          				</li>
+
+          				<li><span class="caret">Anak 2 & Asawa</span>
+            				<ul class="nested">
+              					<<li>Apo 1</li>
+              					<li>Apo 2</li>
+            				</ul>
+          				</li>
+
+          				<li><span class="caret">Anak 3 & asawa</span>
+            				<ul class="nested">
+              					<li>?</li>
+            				</ul>
+          				</li>
+          			</ul>
+		  		</li> 
+
+
+		  		<li><span class="caret">Puring & </span>
+         			<ul class="nested">
+          				<li><span class="caret">Anak 1 & Asawa</span>
+            				<ul class="nested">
+              					<li>Apo 1</li>
+              					<li>Apo 2</li>
+            				</ul>
+          				</li>
+
+          				<li><span class="caret">Anak 2 & Asawa</span>
+            				<ul class="nested">
+              					<li>Apo 1</li>
               					<li>Apo 2</li>
             				</ul>
           				</li>
@@ -334,6 +529,32 @@ ul, #myUL {
           			</ul>
 		  		</li> 
 
+		  		<li><span class="caret">Dho & </span>
+         			<ul class="nested">
+          				<li><span class="caret">Anak 1 & Asawa</span>
+            				<ul class="nested">
+              					<li>Apo 1</li>
+              					<li>Apo 2</li>
+            				</ul>
+          				</li>
+
+          				<li><span class="caret">Anak 2 & Asawa</span>
+            				<ul class="nested">
+              					<li>Apo 1</li>
+              					<li>Apo 2</li>
+            				</ul>
+          				</li>
+
+          				<li><span class="caret">Anak 3 & asawa</span>
+            				<ul class="nested">
+              					<li>?</li>
+            				</ul>
+          				</li>
+          			</ul>
+		  		</li> 
+
+
+
 		  		<li><span class="caret">Arlyn & Sicat</span>
          			<ul class="nested">
           				<li><span class="caret">Anak 1 & Asawa</span>
@@ -364,10 +585,10 @@ ul, #myUL {
 
 
  
-      	<li><span class="caret">Ruming+Tuding</span>
+      	<li><span class="caret">Ruming & Tuding</span>
         	<ul class="nested">
 
-		  		<li><span class="caret">Henry+Lucy</span>
+		  		<li><span class="caret">Henry & Lucy</span>
          			<ul class="nested">
           				<li><span class="caret">Aileen & Domantay</span>
             				<ul class="nested">
@@ -407,16 +628,16 @@ ul, #myUL {
 		  		</li> 
 
 
-		  		<li><span class="caret">Telang(Oct15) & Greg Martin</span>
+		  		<li><span class="caret">Estelita(Oct15) & Greg Martin</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Allan</span>
 							<ul class="nested">              					
             				</ul>
           				</li>
-          				<li><span class="caret">Emily & </span>
+          				<li><span class="caret">Emily & Shaun</span>
 							<ul class="nested">
               					<li>Hendrix</li>
-              					<li>Apo 2</li>              					
+              					<li>Harlow</li>              					
             				</ul>
           				</li>
           			</ul>
@@ -456,13 +677,13 @@ ul, #myUL {
             				</ul>
           				</li>
 
-          				<li><span class="caret">Kye & Collinares</span>
+          				<li><span class="caret">Kaye & Carlo Collinares</span>
             				<ul class="nested">
-              					<li>Chloe</li>
+              					<li></li>
             				</ul>
           				</li>
 
-          				<li><span class="caret"></span>
+          				<li><span class="caret">Karen</span>
             				<ul class="nested">
               					<li>?</li>
             				</ul>
@@ -472,6 +693,13 @@ ul, #myUL {
 
 				<li><span class="caret">Reden & Malou</span>
           			<ul class="nested">
+
+          				<li><span class="caret">Edren & </span>
+          				</li>
+
+          				<li><span class="caret"></span>
+          				</li>          				
+
           				<li><span class="caret">Tristan</span>
           				</li>
 
@@ -501,13 +729,16 @@ ul, #myUL {
           				<li><span class="caret">Clara & </span>
           				</li>
 
-          				<li><span class="caret"></span>
+          				<li><span class="caret">Claudine</span>
           				</li>
+
+          				<li><span class="caret">Claudette</span>
+          				</li>          				
 
           				<li><span class="caret">Carlo</span>
           				</li>
 
-         				<li><span class="caret"></span>
+         				<li><span class="caret">Clare</span>
           				</li>
 
           			</ul>
@@ -515,7 +746,7 @@ ul, #myUL {
 
 				<li><span class="caret">Lulu & Danny Santos</span>
           			<ul class="nested">
-          				<li><span class="caret"></span>
+          				<li><span class="caret">Lorenzo</span>
           				</li>
 
           				<li><span class="caret">Jaime</span>
@@ -553,14 +784,11 @@ ul, #myUL {
           			</ul>
           		</li>	<!--lulu-->
 
-
-
-
         	</ul>
       	</li> <!--ruming-->
 
 
-      	<li><span class="caret">Eki+Ipi Mercado</span>
+      	<li><span class="caret">Eki & Ipi Mercado</span>
         	<ul class="nested">
           		
           		<li><span class="caret">Luz & Rey Arruiza</span>
@@ -606,6 +834,7 @@ ul, #myUL {
         	</ul>
       	</li>  <!--Eki-->
 
+
       	<li><span class="caret">Mereng & Isko Bondoc</span>
       		<ul class="nested">
 
@@ -626,7 +855,7 @@ ul, #myUL {
       	</li>  <!--mereng-->
 
 
-      	<li><span class="caret">Edong+</span>
+      	<li><span class="caret">Edong & Cely</span>
         	<ul class="nested">
           		
           		<li><span class="caret">Apeng & </span>
@@ -643,21 +872,21 @@ ul, #myUL {
             		</ul>
           		</li>
 
-          		<li><span class="caret">Boy & </span>
+          		<li><span class="caret">Giovanni (Boy) & Leny</span>
             		<ul class="nested">
               			<li>?</li>
             		</ul>
           		</li>
 
-          		<li><span class="caret">Cacho & </span>
+          		<li><span class="caret">Cacho & Jovie</span>
             		<ul class="nested">
               			<li>?</li>
             		</ul>
           		</li>          		
 
-          		<li><span class="caret"></span>
+          		<li><span class="caret">Willy & </span>
             		<ul class="nested">
-              			<li>?</li>
+              			<li>Daisy</li>
             		</ul>
           		</li>
 
@@ -722,6 +951,7 @@ for (i = 0; i < toggler.length; i++) {
   });
 }
 </script>
+
 
 </body>
 </html>
