--- a/dizon.html
+++ b/dizon.html
@@ -930,7 +930,7 @@ ul, #myUL {
             				<ul class="nested">            				
             				</ul>
             			</li>  
-            			<li><span class="caret">Jaclelyn & </span>
+            			<li><span class="caret">Jackelyn & </span>
             				<ul class="nested">
               					<li>Laura</li>
             				</ul>
