--- a/bon/index.html
+++ b/bon/index.html
@@ -92,73 +92,73 @@
 <div class="mySlides fade">
   <div class="numbertext">1 / 12</div>
   <img src="../bon/bon01.jpg" width="600" height="500">
-  <div class="text">Caption Text</div>
+  <div class="text">..</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 12</div>
   <img src="../bon/bon02.jpg" width="600" height="500">
-  <div class="text">Caption Text</div>
+  <div class="text">..</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 12</div>
   <img src="../bon/bon03.jpg" width="300" height="500">
-  <div class="text">Caption Two</div>
+  <div class="text">..</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">4 / 12</div>
   <img src="../bon/bon04.jpg" width="300" height="500">
-  <div class="text">Caption Three</div>
+  <div class="text">..</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">5 / 12</div>
   <img src="../bon/bon05.jpg" width="300" height="500">
-  <div class="text">Caption Three</div>
+  <div class="text">..</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">6 / 12</div>
   <img src="../bon/bon06.jpg" width="300" height="500">
-  <div class="text">Caption Three</div>
+  <div class="text">..</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">7 / 12</div>
   <img src="../bon/bon07.jpg" width="300" height="500">
-  <div class="text">Caption Three</div>
+  <div class="text">..</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">8 / 12</div>
   <img src="../bon/bon08.jpg" width="300" height="500">
-  <div class="text">Caption Three</div>
+  <div class="text">..</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">9 / 12</div>
   <img src="../bon/bon09.jpg" width="300" height="500">
-  <div class="text">Caption Three</div>
+  <div class="text">..</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">10 / 12</div>
   <img src="../bon/bon10.jpg" width="300" height="500">
-  <div class="text">Caption Three</div>
+  <div class="text">..</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">11 / 12</div>
-  <img src="../bon/bon11.jpg" width="300" height="500">
-  <div class="text">Caption Three</div>
+  <img src="../bon/bon11.jpg" width="700" height="500">
+  <div class="text">..</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">12 / 12</div>
-  <img src="../bon/bon12.jpg" width="300" height="500">
-  <div class="text">Caption Three</div>
+  <img src="../bon/bon12.jpg" width="600" height="500">
+  <div class="text"><strong>Master Luthier</strong></div>
 </div>
 
 
