--- a/emy/index.html
+++ b/emy/index.html
@@ -92,25 +92,25 @@
 <div class="mySlides fade">
   <div class="numbertext">1 / 4</div>
   <img src="../emy/emy03.jpg" width="500" height="400">
-  <div class="text">Caption Text</div>
+  <div class="text">..</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 4</div>
   <img src="../emy/emy05.jpg" width="500" height="400">
-  <div class="text">Caption Text</div>
+  <div class="text">..</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 4</div>
   <img src="../emy/emy11.jpg" width="500" height="400">
-  <div class="text">Caption Two</div>
+  <div class="text">..</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">4 / 4</div>
   <img src="../emy/emy10.jpg" width="600" height="400">
-  <div class="text">Caption Three</div>
+  <div class="text">..</div>
 </div>
 
 </div>
