--- a/tel/index.html
+++ b/tel/index.html
@@ -92,25 +92,25 @@
 <div class="mySlides fade">
   <div class="numbertext">1 / 4</div>
   <img src="../tel/tel06.jpg" width="500" height="400">
-  <div class="text">Caption Text</div>
+  <div class="text">..</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 4</div>
   <img src="../tel/tel05.jpg" width="500" height="400">
-  <div class="text">Caption Text</div>
+  <div class="text">..</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 4</div>
   <img src="../tel/tel07.jpg" width="500" height="400">
-  <div class="text">Caption Two</div>
+  <div class="text">..</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertlext">4 / 4</div>
   <img src="../tel/tel09.jpg" width="500" height="400">
-  <div class="text">Caption Three</div>
+  <div class="text">..</div>
 </div>
 
 </div>
