--- a/bon/index.html
+++ b/bon/index.html
@@ -85,7 +85,7 @@
 
 <h2>Guitars</h2>
 
-<p>Evolution of Passionate Talents to Skills</p>
+<p>Evolution of Passionate Ingenius Talents to Consumate Skills</p>
 
 <div class="slideshow-container">
 
