--- a/dizon.html
+++ b/dizon.html
@@ -1135,7 +1135,7 @@ ul, #myUL {
           				<li><span class="caret">Carlo</span>
           				</li>
 
-         				<li><span class="caret">Clare</span>
+         				<li><span class="caret">Clare Anne</span>
           				</li>
 
           			</ul>
