--- a/bon/bon.html
+++ b/bon/bon.html
@@ -83,7 +83,7 @@
 </head>
 <body>
 
-<h2>Guitars</h2>
+<h2>Guitars, Bracelets, Quilts</h2>
 
 <p>Evolution of Passionate Ingenius Talents to Consumate Skills</p>
 
