--- a/dizon.html
+++ b/dizon.html
@@ -492,7 +492,7 @@ ul, #myUL {
 
 
       	<!--aling-->
-      	<li><span class="caret">Aling (Elena) & Panta Nacpil</span>
+      	<li><span class="caret">Aling (Alena) & Panta Nacpil</span>
       		<ul class="nested">
 
       			<li><span class="caret">Pepe & </span>
@@ -947,7 +947,7 @@ ul, #myUL {
             				</ul>
           				</li>
 
-          				<li><span class="caret">Gilbert & </span>
+          				<li><span class="caret">Gilbert (Oct26)& </span>
             				<ul class="nested">
               					<li></li>
             				</ul>
@@ -982,7 +982,7 @@ ul, #myUL {
             				<ul class="nested">
               					<li>Alyssa</li>
               					<li>Julia</li>  
-              					<li>Trisha</li>	            					
+              					<li>Patricia (Trisha-Oct15)</li>	            					
             				</ul>
           				</li>
 
@@ -1008,7 +1008,7 @@ ul, #myUL {
 		  		</li> 
 
 
-		  		<li><span class="caret">Estelita (Telang-Oct15) & Greg Martin</span>
+		  		<li><span class="caret">Estelita (Telle-Oct15) & Greg Martin</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Allan & </span>
 							<ul class="nested">              					
@@ -1132,7 +1132,7 @@ ul, #myUL {
             				</ul>
           				</li>          				
 
-          				<li><span class="caret">Carlo</span>
+          				<li><span class="caret">Carlo (Aug4)</span>
           				</li>
 
          				<li><span class="caret">Clare Anne</span>
@@ -1181,7 +1181,7 @@ ul, #myUL {
       	<li><span class="caret">Eki (Aniceta)+ & Ipi Mercado</span>
         	<ul class="nested">
           		
-          		<li><span class="caret">Luz & Rey Arruiza (Jun19)</span>
+          		<li><span class="caret">Luz (Nov1) & Rey Arruiza (Jun19)</span>
             		<ul class="nested">
          				<li><span class="caret">Maria Cristina (Tin) & </span>
             				<ul class="nested">
@@ -1190,7 +1190,7 @@ ul, #myUL {
          				<li><span class="caret">Margie & Gazel Garcia</span>
             				<ul class="nested">
               					<li>Sophia</li>
-              					<li>Ethan</li>
+              					<li>Ethan(Oct30)</li>
             				</ul>
           				</li>
          				<li><span class="caret">Chukz & </span>
@@ -1201,7 +1201,7 @@ ul, #myUL {
             		</ul>
           		</li>
 
-          		<li><span class="caret">Beng & Ricardo Serrano(Bronson)</span>
+          		<li><span class="caret">Beng & Ricardo Serrano(Bronson)(Oct29)</span>
             		<ul class="nested">
            				<li><span class="caret">JC (Con) & Santos</span>
             				<ul class="nested">
@@ -1216,16 +1216,16 @@ ul, #myUL {
             			</li>
            				<li><span class="caret">Cay-cay & Jr Narag</span>
             				<ul class="nested">
-              					<li>Marschannel</li>
+              					<li>Marscha</li>
               					<li>Lucian</li>              				
             				</ul>
             			</li>             
 
-            			<li><span class="caret">Edric 1 & </span>
+            			<li><span class="caret">Edric & </span>
             				<ul class="nested">            				
             				</ul>
             			</li>  
-            			<li><span class="caret">Edric 2 & </span>
+            			<li><span class="caret">Eric 2 & </span>
             				<ul class="nested">            				
             				</ul>
             			</li>  
@@ -1254,9 +1254,9 @@ ul, #myUL {
             		</ul>
           		</li>
 
-         		<li><span class="caret">Enriquito (Kiko) & Lenesia Eslera</span>
+         		<li><span class="caret">Enriquito (Kiko-Jan16) & Lenesia Eslera</span>
             		<ul class="nested">
-              			<li>?</li> 
+              			<li>Maria Lizette (Nov3)</li> 
             		</ul>
           		</li>          		
 
@@ -1345,15 +1345,15 @@ ul, #myUL {
           		<li><span class="caret">Dolphy & Aurora</span>
             		<ul class="nested">
               			<li>Aaron (Ronron-Dec14)</li> 
-              			<li>Francis Adolf</li>    
+              			<li>Francis Adolf (Oct28)</li>    
               			<li>Francheska</li>                  			          			
             		</ul>
           		</li>
 
-          		<li><span class="caret">Lauro (Cacho) & Jovie</span>
+          		<li><span class="caret">Lauro (Cacho) & Jovie Vitalez</span>
             		<ul class="nested">
               			<li>Lance (Dec19)</li>
-              			<li>Rovie Clark</li>     
+              			<li>Rovie Clark (Sep18)</li>     
               			<li>Karl Bryan</li>           			
             		</ul>
           		</li>          		
