--- a/dizon.html
+++ b/dizon.html
@@ -67,8 +67,9 @@ ul, #myUL {
             								<ul class="nested">
 												<li><span class="caret">Apo sa kalingkingan ni Apung Kulas &</span>
             										<ul class="nested">
-              											<li>Apo 1</li>
-              											<li>Apo 2</li>
+              											<li>Kuya</li>
+              											<li>Ate</li>
+              											<li>Bunso</li>
             										</ul>
           										</li> 
             								</ul>
