--- a/dizon.html
+++ b/dizon.html
@@ -48,7 +48,7 @@ ul, #myUL {
 
 <p>paumanhin: paumanhin po sa mga mali. hiling po ang inyong pagwawasto. salamat po.</p>
 <p>tulong: humihingi rin po ng pahintulot sa lahat ng kinaukulan upang ito ay mailathala sa pangkalahatang kaanib sa lahing Kulas. maraming salamat po. </p>
-<p>ang sa inyo ay gumagalang, Budyuk anak ni Ruming.</p>
+<p>ang sa inyo ay gumagalang, Budyuk anak ni Ruming.....</p>
 
 <ul id="myUL">
 
