--- a/dizon.html
+++ b/dizon.html
@@ -333,7 +333,7 @@ ul, #myUL {
           			</ul>
           		</li>            		
 
-      			<li><span class="caret">Suk & </span>
+      			<li><span class="caret">Melchor(Suk) & </span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Mel & Raquel Natanawan</span>
 							<ul class="nested">  
@@ -1328,37 +1328,39 @@ ul, #myUL {
       	</li>  <!--edong-->
 
 
-      	<li><span class="caret">Ukong (Angel-Mar3) & Peming</span>
+      	<li><span class="caret">Angel (Ukong-Mar 3) & Fermina Pineda (Peming-Nov 4)</span>
         	<ul class="nested">
           		
-          		<li><span class="caret">Arlene & Gilbert Olivar</span>
+          		<li><span class="caret">Angelito (Lito-Dec 27) & Leonora Rivera (Aug 16)</span>
             		<ul class="nested">
-              			<li>Pangane</li>
-              			<li>Kadwa</li>
-              			<li>Bunso</li>
+              			<li>Sean Angelo (Aug 3)</li> 
+              			<li>Koby Lean (July 11)</li> 
+              			<li>Trisha Carys (Feb 15)</li> 
             		</ul>
           		</li>
 
-          		<li><span class="caret">Angelito (Lito-Dec24) & Trisha</span>
+          		<li><span class="caret">Arlene (Aug 5) & Gilbert Olivar (July 1)</span>
             		<ul class="nested">
-              			<li>Trisha</li> 
+              			<li>Johann Luis (Jan 27)</li> 
             		</ul>
           		</li>
 
-          		<li><span class="caret">Arnel (Ney) & Marilou (Lot)</span>
+          		<li><span class="caret">Arnold (Dec 3) & Debbie Dela Cruz (July 25)</span>
             		<ul class="nested">
-              			<li>Andrea Marie</li>               			
-              			<li>Anna</li>              			
-              			<li>Alyx (Dec1)</li>                 			         			
+              			<li>Angelica (Aug 11)</li>
+              			<li>Angeline Nicole (April 16)</li>
+              			<li>Adrian (Feb 28)</li>
+              			<li>Althea (Nov 19)</li>              			
+            		</ul>
+          		</li>          	
+
+          		<li><span class="caret">Arnel (Ney-Oct 30) & Marilou Araneta (Lot-Jan 7)</span>
+            		<ul class="nested">
+              			<li>Andrea Marie (Jun 28)</li>               			
+              			<li>Anna Lourain (July 2)</li>              			
+              			<li>Alyxandrea (Dec 1)</li>                 			         			
             		</ul>
           		</li>
-
-          		<li><span class="caret">Arnold(Dec3) & Debbie</span>
-            		<ul class="nested">
-              			<li>Angeline Nicole</li>
-              			<li>Althea (Nov19)</li>              			
-            		</ul>
-          		</li>          		
 
         	</ul>
       	</li>  <!--amgel-->
