--- a/dizon.html
+++ b/dizon.html
@@ -88,7 +88,7 @@ ul, #myUL {
       	<li><span class="caret">Supri (Cipriano) & Gunding</span>
       		<ul class="nested">
 
-      			<li><span class="caret">Pascual (Hardy) & Sonia</span>
+      			<li><span class="caret">Pascual (Hardy-mmdd) & Sonia</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Paul & Heidi</span>
 							<ul class="nested">
@@ -123,7 +123,7 @@ ul, #myUL {
 
       			<li><span class="caret">Junior & Connie</span>
 		  			<ul class="nested">
-		  				<li><span class="caret">Olivia (Olive) & George Sagun</span>
+		  				<li><span class="caret">Olivia (Olive-mmdd) & George Sagun</span>
 							<ul class="nested">
               					<li>Celine</li>
               					<li>Coleen</li>
@@ -355,8 +355,10 @@ ul, #myUL {
 
      			<li><span class="caret">Lolita & </span>
 		  			<ul class="nested">
-		  				<li><span class="caret"></span>
-							<ul class="nested">            					
+		  				<li><span class="caret">Vangie Tuazon Pastrana</span>
+							<ul class="nested">  
+ 								<li>
+								</li>           					
             				</ul>
           				</li>
           			</ul>
@@ -503,7 +505,7 @@ ul, #myUL {
 
      			<li><span class="caret">Dito & </span>
 		  			<ul class="nested">
-		  				<li><span class="caret"></span>
+		  				<li><span class="caret">Levy Nacpil</span>
 							<ul class="nested">           					
             				</ul>
           				</li>
@@ -565,10 +567,10 @@ ul, #myUL {
       		</ul>
       	</li>	<!--aling-->
  
-      	<li><span class="caret">German & Flora</span>
+      	<li><span class="caret">German(Ger-mmdd) & Flora</span>
       		<ul class="nested">
 
-				<li><span class="caret">Abel (Ado) & Mila</span>
+				<li><span class="caret">Abel (Ado-mmdd) & Mila</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Bonn-Minette & Anchoris</span>
 							<ul class="nested">            					
@@ -600,7 +602,7 @@ ul, #myUL {
           			</ul>
           		</li>
 
-      			<li><span class="caret">Francisco (Francis-Jan17) & Imelda (Bong-Jul31)</span>
+      			<li><span class="caret">Francisco (Francis-Jan-17) & Imelda (Bong-Jul31)</span>
 		  			<ul class="nested">          				
           				<li><span class="caret">Ivy & Mark Lingad</span>
 							<ul class="nested">
@@ -660,7 +662,7 @@ ul, #myUL {
           			</ul>
           		</li>
 
-          		<li><span class="caret">Teodora (Jul1) & Madali</span>
+          		<li><span class="caret">Teodora (Jul01) & Madali</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Patricia & </span>
 							<ul class="nested">           					
@@ -678,7 +680,7 @@ ul, #myUL {
 
       			<li><span class="caret">Norma & Chu </span>
          			<ul class="nested">
-          				<li><span class="caret">Angelito(Jul3) & </span>
+          				<li><span class="caret">Angelito(Jul03) & </span>
             				<ul class="nested">
             				</ul>
           				</li>
@@ -805,10 +807,10 @@ ul, #myUL {
 
 		  		<li><span class="caret">Puring (Dec25) & Jun Coronado</span>
          			<ul class="nested">
-          				<li><span class="caret">Ella She (Mar 7) & Christian Argel</span>
+          				<li><span class="caret">Ella She (Mar07) & Christian Argel</span>
             				<ul class="nested">
               					<li>Sebastian (Aug03)</li>
-              					<li>Steve (Aug 24)</li>
+              					<li>Steve (Aug24)</li>
             				</ul>
           				</li>
           				<li><span class="caret">Sarah & </span>
@@ -953,7 +955,7 @@ ul, #myUL {
 		  		</li> 
 
 
-		  		<li><span class="caret">Estelita (Telang-Oct15) & Greg Martin</span>
+		  		<li><span class="caret">Estelita (Telang-Oct15) & Greg Martin+</span>
 		  			<ul class="nested">
 		  				<li><span class="caret">Allan & </span>
 							<ul class="nested">              					
@@ -1107,7 +1109,7 @@ ul, #myUL {
           		<li><span class="caret">Pilar (Pi)</span>
           		</li>	
 
-				<li><span class="caret">Cristina (Tinay) & Jorge Sanchez</span>
+				<li><span class="caret">Cristina (Tinay-) & Jorge Sanchez</span>
           			<ul class="nested">
           				<li><span class="caret">Joseph</span>
           				</li>
@@ -1124,7 +1126,7 @@ ul, #myUL {
       	</li> <!--ruming-->
 
 
-      	<li><span class="caret">Eki (Aniceta)+ & Ipi Mercado</span>
+      	<li><span class="caret">Eki (Aniceta-mmdd)+ & Ipi Mercado(Felipe-mmdd)</span>
         	<ul class="nested">
           		
           		<li><span class="caret">Luz & Rey Arruiza (Jun19)</span>
@@ -1179,16 +1181,16 @@ ul, #myUL {
             		</ul>
           		</li>
 
-          		<li><span class="caret">Melda (Dang) & Rico Sevilla</span>
+          		<li><span class="caret">Melda (Dang-mmdd) & Rico Sevilla (</span>
             		<ul class="nested">
-            			<li><span class="caret">Jejomar (Joms)) & </span>
+            			<li><span class="caret">Jejomar (Joms-mmdd) & </span>
             				<ul class="nested">            				
             				</ul>
             			</li>  
             			<li><span class="caret">Katrina & Antonio</span>
             				<ul class="nested">   
             					<li>
-            						Adam Primo (Jul8)
+            						Adam Primo (Jul08)
             					</li>         				
             				</ul>
             			</li>  
@@ -1200,23 +1202,27 @@ ul, #myUL {
             		</ul>
           		</li>
 
-         		<li><span class="caret">Enriquito (Kiko) & Lenesia Eslera</span>
+         		<li><span class="caret">Enriquito (Kiko-mmdd) & Lenesia Eslera(nnn-mmdd)</span>
             		<ul class="nested">
-              			<li>?</li> 
+            			<li><span class="caret">Cheng</span>
+            				<ul class="nested">            				
+            				</ul>
+            			</li>   
             		</ul>
           		</li>          		
 
-          		<li><span class="caret">Jocelyn (Josie-Jan 4) & Jay Fabian (Mar 9)</span>
+          		<li><span class="caret">Jocelyn (Josie-Jan04) & Jay Fabian (Mar09)</span>
             		<ul class="nested">
               			<li>Yna Jacela (Nov27)</li>
               			<li>Timothy Jay</li>              			
             		</ul>
           		</li>
 
-          		<li><span class="caret">Sally & Nacpil</span>
+          		<li><span class="caret">Sally (May19) & Boyet Nacpil</span>
             		<ul class="nested">
               			<li>Anak 1</li>
               			<li>Anak 2</li> 
+              			<li>Anak 3</li> 
             		</ul>
           		</li>
 
@@ -1227,7 +1233,7 @@ ul, #myUL {
       	<li><span class="caret">Mereng (Emerenciana)+ & Isko Bondoc+</span>
       		<ul class="nested">
 
-          		<li><span class="caret">Edith & Arnold Sabellano (Dec 26)</span>
+          		<li><span class="caret">Edith & Arnold Sabellano (Dec26)</span>
             		<ul class="nested">
             			<li><span class="caret">Borg (RJ) & </span>
             				<ul class="nested">            				
@@ -1241,7 +1247,7 @@ ul, #myUL {
             		<ul class="nested"> 
             			<li><span class="caret">Jacquelyn (Ging) & Dela Cruz</span>
             				<ul class="nested"> 
-              					<li>Primo (Dec2)</li>   
+              					<li>Primo (Dec02)</li>   
              					<li>Laura</li>	           					
             				</ul>
           				</li> 
@@ -1281,7 +1287,7 @@ ul, #myUL {
             		</ul>
           		</li>
 
-          		<li><span class="caret">Emmanuel (Apeng-May4) & May</span>
+          		<li><span class="caret">Emmanuel (Apeng-May04) & May</span>
             		<ul class="nested">
               			<li>Aira</li>
               			<li>Mark</li>
@@ -1328,37 +1334,37 @@ ul, #myUL {
       	</li>  <!--edong-->
 
 
-      	<li><span class="caret">Angel (Ukong-Mar 3) & Fermina Pineda (Peming-Nov 4)</span>
+      	<li><span class="caret">Angel (Ukong-Mar03) & Fermina Pineda (Peming-Nov04)</span>
         	<ul class="nested">
           		
-          		<li><span class="caret">Angelito (Lito-Dec 27) & Leonora Rivera (Aug 16)</span>
+          		<li><span class="caret">Angelito (Lito-Dec27) & Leonora Rivera (Aug16)</span>
             		<ul class="nested">
-              			<li>Sean Angelo (Aug 3)</li> 
-              			<li>Koby Lean (July 11)</li> 
-              			<li>Trisha Carys (Feb 15)</li> 
+              			<li>Sean Angelo (Aug03)</li> 
+              			<li>Koby Lean (July11)</li> 
+              			<li>Trisha Carys (Feb15)</li> 
             		</ul>
           		</li>
 
-          		<li><span class="caret">Arlene (Aug 5) & Gilbert Olivar (July 1)</span>
+          		<li><span class="caret">Arlene (Aug05) & Gilbert Olivar (July01)</span>
             		<ul class="nested">
-              			<li>Johann Luis (Jan 27)</li> 
+              			<li>Johann Luis (Jan27)</li> 
             		</ul>
           		</li>
 
-          		<li><span class="caret">Arnold (Dec 3) & Debbie Dela Cruz (July 25)</span>
+          		<li><span class="caret">Arnold (Dec03) & Debbie Dela Cruz (July25)</span>
             		<ul class="nested">
-              			<li>Angelica (Aug 11)</li>
-              			<li>Angeline Nicole (April 16)</li>
-              			<li>Adrian (Feb 28)</li>
-              			<li>Althea (Nov 19)</li>              			
+              			<li>Angelica (Aug11)</li>
+              			<li>Angeline Nicole (Apr16)</li>
+              			<li>Adrian (Feb28)</li>
+              			<li>Althea (Nov19)</li>              			
             		</ul>
           		</li>          	
 
-          		<li><span class="caret">Arnel (Ney-Oct 30) & Marilou Araneta (Lot-Jan 7)</span>
+          		<li><span class="caret">Arnel (Ney-Oct30) & Marilou Araneta (Lot-Jan07)</span>
             		<ul class="nested">
-              			<li>Andrea Marie (Jun 28)</li>               			
-              			<li>Anna Lourain (July 2)</li>              			
-              			<li>Alyxandrea (Dec 1)</li>                 			         			
+              			<li>Andrea Marie (Jun28)</li>               			
+              			<li>Anna Lourain (July02)</li>              			
+              			<li>Alyxandrea (Dec01)</li>                 			         			
             		</ul>
           		</li>
 
