--- a/dizon.html
+++ b/dizon.html
@@ -1363,7 +1363,7 @@ ul, #myUL {
           		<li><span class="caret">Arnel (Ney-Oct30) & Marilou Araneta (Lot-Jan07)</span>
             		<ul class="nested">
               			<li>Andrea Marie (Jun28)</li>               			
-              			<li>Anna Lourain (July02)</li>              			
+              			<li>Anna Louraine (July02)</li>              			
               			<li>Alyxandrea (Dec01)</li>                 			         			
             		</ul>
           		</li>
